--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Y este es el parrafo del inicio</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el titulo atractivo del post</h1>
+            <p>Aqui debe ir el contenido extravagante e 
+                interesante sobre el tema del post</p>
+        </div>
+    </div>
+    
 </body>
 </html>
