--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <div id="container">
+        <div id="header">
+            <h1>Cabecera</h1>
+        </div>
+
         <div id="post">
-            <h1>Este es el titulo atractivo del post</h1>
+            <h2>Este es el titulo atractivo del post</h2>
             <p>Aqui debe ir el contenido extravagante e 
                 interesante sobre el tema del post</p>
         </div>
