--- a/blogpost.html
+++ b/blogpost.html
@@ -9,11 +9,11 @@
 <body>
     <div id="container">
         <div id="header">
-            <h1>Cabecera</h1>
+           HyperBlog <span id="tagline">Tu blog de confianza</span>
         </div>
 
         <div id="post">
-            <h2>Este es el titulo atractivo del post</h2>
+            <h1>Este es el titulo atractivo del post</h1>
             <p>Aqui debe ir el contenido extravagante e 
                 interesante sobre el tema del post</p>
         </div>
