--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,12 @@
         <div id="post">
             <h1>Este es el titulo atractivo del post</h1>
             <p>Aqui debe ir el contenido extravagante e 
-                interesante sobre el tema del post</p>
+                interesante sobre el tema del post
+            </p>
+            <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas
+                que ir a conferencias o salir en Youtube. Excepto si eres un rockstar como
+                Fredy Vega. Pero estadisticamente no lo eres ... por ahora.
+            </p>
         </div>
     </div>
     
