--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="header">
-           HyperBlog <span id="tagline">Tu blog de confianza</span>
+           HyperBlog <span id="tagline">Tu blog maestro</span>
         </div>
 
         <div id="post">
