Modifique el header y el color de texto azul, y un nuevo parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,7 @@
                 que ir a conferencias o salir en Youtube. Excepto si eres un rockstar como
                 Fredy Vega. Pero estadisticamente no lo eres ... por ahora.
             </p>
+            <p>Suscribete y dale Like</p>
         </div>
     </div>
     
