--- a/blogpost.html
+++ b/blogpost.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlogPost de prueba con Git</title>
+    <title>BlogPost de prueba con Git 2.0</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
