--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,9 @@
 <body>
     <div id="container">
         <div id="header">
-           HyperBlog <span id="tagline">Tu blog de cabecera</span>
+            <img id="logo" src="/img/baldur.jpg" alt="logo"/> 
+            HyperBlog 
+            <span id="tagline">Tu blog de cabecera</span>
         </div>
 
         <div id="post">
