--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,9 @@
             </p>
             <p>Suscribete y dale Like</p>
         </div>
+        <div id="footer">
+            <p>Con amor de Steven <3 </p>
+        </div>
     </div>
     
 </body>
