--- a/blogpost.html
+++ b/blogpost.html
@@ -15,15 +15,15 @@
         </div>
 
         <div id="post">
-            <h1>Este es el titulo atractivo del post</h1>
-            <p>Aqui debe ir el contenido extravagante e 
+            <h1>Este es el título atractivo del post</h1>
+            <p>Aquí debe ir el contenido extravagante e 
                 interesante sobre el tema del post
             </p>
             <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas
                 que ir a conferencias o salir en Youtube. Excepto si eres un rockstar como
-                Fredy Vega. Pero estadisticamente no lo eres ... por ahora.
+                Fredy Vega. Pero estadísticamente no lo eres ... por ahora.
             </p>
-            <p>Suscribete y dale Like</p>
+            <p>Suscríbete y dale Like</p>
         </div>
         <div id="footer">
             <p>Con amor de Steven <3 </p>
