--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
         <div id="header">
             <img id="logo" src="/img/baldur.jpg" alt="logo"/> 
             HyperBlog 
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de confianza como siempre</span>
         </div>
 
         <div id="post">
